--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
   <meta http-equiv="Content-Script-Type" content="text/javascript"/>
   <style media=screen>
+    <base href="/etmviewer/">
   <!--
     /*印刷時のみ表示*/
     .prtOnly {display:none;}
